fixed picture gap, finished header + footer

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <div class="contain">
 
     <header class="logo">
+      <img  class="logo" src="images/logo.svg" alt="logo"">
       <nav>
-        <img  class="logo" src="images/logo.svg" alt="logo"">
         <ul> About</ul>
         <ul> Services</ul>
         <ul> Projects</ul>
@@ -94,22 +94,22 @@
       <article class="testimonial1">
         <img src="images/image-emily.jpg" alt="Emily">
         <p> We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
-        <footer>Emily R.
-        Marketing Director</footer> 
+        <p>Emily R.</p>
+        <footer>Marketing Director</footer> 
       </article>
 
       <article class="testimonial2">
         <img src="images/image-thomas.jpg" alt="image-thomas">
         <p> Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
-        <footer> Thomas S.
-        Chief Operating Officer</footer>
+        <p>Thomas S.</p>
+        <footer>Chief Operating Officer</footer>
       </article>
 
       <article class="testimonial3">
         <img src="images/image-jennie.jpg" alt="Jennie">
         <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p> 
-        <footer> Jennie F.
-        Business Owner</footer>
+        <p>Jennie F.</p>
+        <footer>Business Owner</footer>
       </article>
     </div>
   </section>  
@@ -135,6 +135,7 @@
   </section>
 
   <footer class="last">
+    <img src="images/logo.svg" alt="logo">
     <nav>
      <a href="#"> About</a>
       <a href="#"> Services </a>
