--- a/index.html
+++ b/index.html
@@ -26,13 +26,19 @@
     <h1 class="title"> We are creatives</h1>
     <img class="arrow" src="images/icon-arrow-down.svg" alt="icon-arrow-down">
       <picture>
-        <source media="max-width = 768px" src="images/mobile/image-header.jpg">
+        <source media="(max-width: 768px)" srcset="images/mobile/image-header.jpg">
         <img src="images/desktop/image-header.jpg" alt="grapefruit-sliced">
       </picture>
-
   </main> 
 
   <section class="wrapper">
+    <article class="wrap2">
+      <picture>
+        <source media="(max-width: 768px)" srcset="images/mobile/image-transform.jpg">
+        <img src="images/desktop/image-transform.jpg" alt="egg">
+      </picture>
+    </article>
+
     <article class="wrap1">
       <h3> Transform your brand</h3>
 
@@ -42,16 +48,9 @@
       <a href="#"> Learn more </a>
     </article>
 
-    <article class="wrap2">
-      <picture>
-        <source media="max-width = 768px" src="images/mobile/image-transform.jpg">
-        <img src="images/desktop/image-transform.jpg" alt="egg">
-      </picture>
-    </article>
-
     <article class="wrap3">
       <picture>
-        <source media="max-width = 768px" src="images/mobile/image-stand-out.jpg">
+        <source media="(max-width : 768px)" srcset="images/mobile/image-stand-out.jpg">
         <img src="images/desktop/image-stand-out.jpg" alt="cup">
       </picture>
     </article>
@@ -66,7 +65,7 @@
 
     <article class="wrap5">
       <picture>
-        <source media="max-width = 768px" src="images/mobile/image-graphic-design.jpg">
+        <source media="(max-width : 768px)" srcset="images/mobile/image-graphic-design.jpg">
         <img src="images/desktop/image-graphic-design.jpg" alt=" two cherries">
       </picture>
       <div class="txt">
@@ -77,7 +76,7 @@
 
     <article class="wrap6">
       <picture>
-        <source media="max-width = 768px" src="images/mobile/image-photography.jpg">
+        <source media="(max-width : 768px)" srcset="images/mobile/image-photography.jpg">
         <img src="images/desktop/image-photography.jpg" alt=" clementine">
       </picture>
       <div class="txt">
@@ -116,19 +115,19 @@
 
   <section class="img-row">
     <picture>
-      <source media="(max-width = 768px)" src="images/mobile/image-gallery-milkbottles.jpg">
+      <source media="(max-width : 768px)" srcset="images/mobile/image-gallery-milkbottles.jpg">
       <img src="images/desktop/image-gallery-milkbottles.jpg" alt="milk">
     </picture>
     <picture>
-      <source media="(max-width = 768px)" src="images/mobile/image-gallery-orange.jpg">
+      <source media="(max-width : 768px)" srcset="images/mobile/image-gallery-orange.jpg">
       <img src="images/desktop/image-gallery-orange.jpg" alt="orange">
     </picture>
     <picture>
-      <source media="(max-width = 768px)" src="images/mobile/image-gallery-cone.jpg">
+      <source media="(max-width : 768px)" srcset="images/mobile/image-gallery-cone.jpg">
       <img src="images/desktop/image-gallery-cone.jpg" alt="cone">
     </picture>
     <picture>
-      <source media="(max-width = 768px)" src="images/mobile/image-gallery-sugar-cubes.jpg">
+      <source media="(max-width : 768px)" srcset="images/mobile/image-gallery-sugar-cubes.jpg">
       <img src="images/desktop/image-gallery-sugarcubes.jpg" alt="sugar">
     </picture>
   
