--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="index.css">
-  
+  <script src="index.js" defer></script>
   <title>Frontend Mentor | Sunnyside agency landing page</title>
 </head>
 <body>
@@ -146,8 +145,8 @@
       Coded by <a href="#">Your Name Here</a>.
     </div>
   </footer>
+
 </div>
 
-  <script src="index.js"></script>
 </body>
 </html>
