fixed mobile version, added transitions

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <header class="logo">
       <img  class="logo" src="images/logo.svg" alt="logo"">
       <nav>
-        <ul> About</ul>
-        <ul> Services</ul>
-        <ul> Projects</ul>
+        <ul> <a href="#about">About</a></ul>
+        <ul> <a href="#service">Services</a></ul>
+        <ul> <a href="#project">Projects</a></ul>
         <ul> <button>Contact</button> </ul>
       </nav>  
     </header>
 
-  <main>
+  <main id="about">
     <h1 class="title"> We are creatives</h1>
     <img class="arrow" src="images/icon-arrow-down.svg" alt="icon-arrow-down">
       <picture>
@@ -30,7 +30,7 @@
       </picture>
   </main> 
 
-  <section class="wrapper">
+  <section class="wrapper" id="service">
     <article class="wrap2">
       <picture>
         <source media="(max-width: 768px)" srcset="images/mobile/image-transform.jpg">
@@ -112,7 +112,7 @@
     </div>
   </section>  
 
-  <section class="img-row">
+  <section class="img-row" id="project">
     <picture>
       <source media="(max-width : 768px)" srcset="images/mobile/image-gallery-milkbottles.jpg">
       <img src="images/desktop/image-gallery-milkbottles.jpg" alt="milk">
@@ -135,14 +135,13 @@
   <footer class="last">
     <img src="images/logo.svg" alt="logo">
     <nav>
-     <a href="#"> About</a>
-      <a href="#"> Services </a>
-      <a href="#"> Projects</a>
-      <a href="#"> Contact</a>
+     <a href="#about"> About</a>
+      <a href="#service"> Services </a>
+      <a href="#project"> Projects</a>
     </nav>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Denito</a>.
     </div>
   </footer>
 
